--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,7 +43,8 @@ xxhash-c = "0.8"
 angry-purple-tiger = "0"
 lorawan = { package = "lorawan", path = "lorawan" }
 semtech-udp = { git = "https://github.com/helium/semtech-udp", branch = "master", features=["server"] }
-helium-proto = { git = "https://github.com/helium/proto", branch="master", features=["services"]}
+helium-proto = { path = "../proto", features=["services"] }
+#helium-proto = { git = "https://github.com/helium/proto", branch="master", features=["services"]}
 helium-crypto = { git = "https://github.com/helium/helium-crypto-rs", tag = "v0.0.7"}
 xorf = { git = "https://github.com/helium/xorf", branch = "master" }
 longfi = { git = "https://github.com/helium/longfi-rs", branch = "main" }
